福島Project/src/objects/JFK_Bosyu__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>BosyuKai__c</fullName>
        <label>募集回</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BosyuNendo__c</fullName>
        <externalId>true</externalId>
        <label>募集年度</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bosyu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>募集</label>
        <referenceTo>JFK_Bosyu__c</referenceTo>
        <relationshipName>Bosyus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyosyoKBN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所区分</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipName>JigyosyoKBN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JyoseiTanka_1stYear__c</fullName>
        <label>助成対象期単価(1年目)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JyoseiTanka_2nsYear__c</fullName>
        <label>助成対象期単価(2年目)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KaiMe__c</fullName>
        <description>支給時期別のオブジェクトで入力
募集回の○年目○回目の「○回目」</description>
        <label>○回目</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KoyoKBN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>雇用区分</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipName>KoyoKBNs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KoyoKaishiSaihayaBi__c</fullName>
        <description>この日以降に雇用を開始した労働者が申請対象となる（募集回情報）</description>
        <inlineHelpText>この日以降に雇用を開始した労働者が申請対象となる</inlineHelpText>
        <label>募集回基点日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KoyoKeitai__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>雇用形態</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipLabel>募集M (労働時間)</relationshipLabel>
        <relationshipName>KoyoKeitais</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NenMe__c</fullName>
        <description>支給時期別のオブジェクトで入力
募集回の○年目○回目の「○年目」</description>
        <label>○年目</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PK__c</fullName>
        <label>ユニークキー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShikyuJiki_Sushiki__c</fullName>
        <description>○年目○回目の指定から支給時期を自動生成</description>
        <formula>IF (OR(Isblank(NenMe__c), IsBlank(KaiMe__c)), Null, TEXT(NenMe__c) &amp; &quot;-&quot; &amp; TEXT(KaiMe__c))</formula>
        <label>支給時期</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShikyuKaishiBi_Kettei__c</fullName>
        <description>支給開始日の算出方法（募集回情報）</description>
        <inlineHelpText>支給開始日の算出方法
支給決定日 → 支給決定日が全ての労働者の支給開始日
未達解消次第 → 支給開始最早日以降、未達が解消次第</inlineHelpText>
        <label>支給開始日決定方法</label>
        <picklist>
            <picklistValues>
                <fullName>支給決定日</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未達解消次第</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShikyuKaishiBi__c</fullName>
        <label>支給対象期間 開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuKaishiSaihayaBi__c</fullName>
        <description>支給開始日となりうる最も早い日付（募集回情報）</description>
        <inlineHelpText>県庁から指定された、支給開始日となりうる最も早い日付
各労働者の支給開始日はこの日以降に設定される
支給開始日が一律に決まる＝支給決定日の場合、こには何も指定しない</inlineHelpText>
        <label>県庁指定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuShimeBi__c</fullName>
        <label>支給対象期間 締日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShinseiKikanSaisyuBi__c</fullName>
        <description>この日までに雇用された労働者が申請対象となる（募集回情報）</description>
        <inlineHelpText>この日までに雇用された労働者が申請対象となる</inlineHelpText>
        <label>申請期間最終日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SyoseiTanka_3rdYear__c</fullName>
        <label>助成対象期単価(3年目)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>募集M</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BosyuNendo__c</columns>
        <columns>BosyuKai__c</columns>
        <columns>Bosyu__c</columns>
        <columns>ShikyuKaishiBi__c</columns>
        <columns>ShikyuShimeBi__c</columns>
        <columns>ShikyuJiki_Sushiki__c</columns>
        <columns>KoyoKeitai__c</columns>
        <columns>KoyoKBN__c</columns>
        <columns>JigyosyoKBN__c</columns>
        <columns>JyoseiTanka_1stYear__c</columns>
        <columns>JyoseiTanka_2nsYear__c</columns>
        <columns>SyoseiTanka_3rdYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>募集名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>BosyuYoryo_ShikyuJiki</fullName>
        <active>true</active>
        <description>支給時期（○年目○回目）の情報を登録します。</description>
        <label>支給時期</label>
    </recordTypes>
    <recordTypes>
        <fullName>BosyuYoryo_ShikyugakuSansyutu</fullName>
        <active>true</active>
        <description>募集回毎の助成対象期単価の情報を登録します。</description>
        <label>助成対象期単価</label>
    </recordTypes>
    <recordTypes>
        <fullName>BosyuYoryo_YearTimes</fullName>
        <active>true</active>
        <description>募集回（○年度第○回）の情報を登録します。</description>
        <label>募集回</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>JFK_Bosyu_chkDate</fullName>
        <active>true</active>
        <errorConditionFormula>ShikyuKaishiBi__c &gt;  ShikyuShimeBi__c</errorConditionFormula>
        <errorDisplayField>ShikyuKaishiBi__c</errorDisplayField>
        <errorMessage>日付の大小に誤りがあります。</errorMessage>
    </validationRules>
</CustomObject>